src/objects/MYBZ_Call__c.object
<CustomObject>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <label>Global ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Position__c</fullName>
        <label>Product Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>MYBZ_Product__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>IHS_Product_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>MYBZ_Territory__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Global_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Global_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>